PMforce/src/objects/Sign_Off__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sign Off</relationshipLabel>
        <relationshipName>Sign_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Sent_to__c</fullName>
        <label>Received / Sent to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Off_For__c</fullName>
        <label>Sign Off For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requirement Understanding</fullName>
                </value>
                <value>
                    <fullName>Technical Design</fullName>
                </value>
                <value>
                    <fullName>Mock Up / UI Design</fullName>
                </value>
                <value>
                    <fullName>Milestone Sign Off</fullName>
                </value>
                <value>
                    <fullName>UAT sign Off</fullName>
                </value>
                <value>
                    <fullName>Project Sign Off</fullName>
                </value>
                <value>
                    <fullName>Warranty Sign Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sign Off</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Sign Off No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>